storage/innobase/include/buf0dblwr.h
@@ -103,11 +103,14 @@ public:
   If we are upgrading from a version before MySQL 4.1, then this
   function performs the necessary update operations to support
   innodb_file_per_table. If we are in a crash recovery, this function
-  loads the pages from double write buffer into memory.
+  loads the pages from double write buffer which are larger than
+  checkpoint lsn into memory.
   @param file File handle
   @param path Path name of file
+  @param checkpoint_lsn checkpoint lsn
   @return DB_SUCCESS or error code */
-  dberr_t init_or_load_pages(pfs_os_file_t file, const char *path);
+  dberr_t init_or_load_pages(pfs_os_file_t file, const char *path,
+			     lsn_t checkpoint_lsn);
 
   /** Process and remove the double write buffer pages for all tablespaces. */
   void recover();
